# Whatschedule

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  interactive.rs  main.rs  model.rs  scheduler.rs  store.rs  timeparse.rs  whatsapp.rs
